# middlewares/verifyDatabase.js
@@ -9,6 +9,7 @@ const verifyDb = async (req, res, next) => {
   );
   if (
     req.url.startsWith("/api/docs/") ||
+    req.url.startsWith("/api/oauth2callback") ||
     VERIFY_DB_BLACKLIST.includes(req.url)
   ) {
     console.log("bypass database verification", req.url);
